--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -21,7 +21,7 @@
 <body>
 
   <h1>QChat Privacy Policy</h1>
-  <p><strong>Effective Date:</strong> October 2024</p>
+  <p><strong>Effective Date:</strong> January 5, 2025</p>
 
   <h2>1. Introduction</h2>
   <p>Welcome to QChat (“QChat,” “we,” “us,” or “our”). We value your privacy and are dedicated to protecting your personal data. This Privacy Policy describes how we collect, use, and disclose information when you use our services (“Services”) through the QChat application.</p>
