--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
     <div class="container">
         <img src="qchat_logo.png" alt="QChat Logo">
         <h1>Welcome to QChat</h1>
-        <p>Need help or have any questions?</p>
-        <p>Reach out to us anytime!</p>
+        <p>Need help or have any questions?\nReach out to us anytime!</p>
         <p>Email: <a href="mailto:qchatwelcome@gmail.com
 ">qchatwelcome@gmail.com
 </a></p>
