--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Olymp Privacy Policy</title>
+  <title>QChat Privacy Policy</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,12 +20,12 @@
 </head>
 <body>
 
-  <h1>Olymp Privacy Policy</h1>
+  <h1>QChat Privacy Policy</h1>
   <p><strong>Effective Date:</strong> January 5, 2025</p>
 
   <h2>1. Introduction</h2>
-  <p>Welcome to Olymp (“Olymp,” “we,” “us,” or “our”). We value your privacy and are dedicated to protecting your personal data. This Privacy Policy describes how we collect, use, and disclose information when you use our services (“Services”) through the Olymp application.</p>
-  <p>Because Olymp uses the OpenAI API to power its chat and AI features, please be aware that your information may be processed or stored by OpenAI. This Policy incorporates, by reference where relevant, certain aspects of OpenAI’s Privacy Policy (“OpenAI Policy”). In the event of any conflict between this Privacy Policy and the OpenAI Policy regarding how OpenAI processes your data, the OpenAI Policy governs for those data processing activities handled by OpenAI.</p>
+  <p>Welcome to QChat (“QChat,” “we,” “us,” or “our”). We value your privacy and are dedicated to protecting your personal data. This Privacy Policy describes how we collect, use, and disclose information when you use our services (“Services”) through the QChat application.</p>
+  <p>Because QChat uses the OpenAI API to power its chat and AI features, please be aware that your information may be processed or stored by OpenAI. This Policy incorporates, by reference where relevant, certain aspects of OpenAI’s Privacy Policy (“OpenAI Policy”). In the event of any conflict between this Privacy Policy and the OpenAI Policy regarding how OpenAI processes your data, the OpenAI Policy governs for those data-processing activities handled by OpenAI.</p>
 
   <h2>2. Information We Collect</h2>
   
@@ -33,14 +33,14 @@
   <ul>
     <li><strong>Name:</strong> Used for in-app functions and analytics.</li>
     <li><strong>Email Address:</strong> Used for creating your account, communication, and analytics.</li>
-    <li><strong>User Content (e.g., messages, uploads, prompts):</strong> Includes text, emails, photos, or videos you submit to Olymp. Used for app functionality and analytics.</li>
-    <li><strong>Customer Support Information:</strong> Any details you provide when you contact Olymp support.</li>
+    <li><strong>User Content (e.g., messages, uploads, prompts):</strong> Includes text, emails, photos, or videos you submit to QChat. Used for app functionality and analytics.</li>
+    <li><strong>Customer Support Information:</strong> Any details you provide when you contact QChat support.</li>
     <li><strong>User ID (Identifiers):</strong> Internal references used for analytics and managing user accounts.</li>
   </ul>
 
   <h3>2.2 Information Collected Automatically</h3>
   <ul>
-    <li><strong>Usage Data:</strong> Information about how you interact with Olymp (e.g., features used, dates and times of access, session length).</li>
+    <li><strong>Usage Data:</strong> Information about how you interact with QChat (e.g., features used, dates and times of access, session length).</li>
     <li><strong>Device and Log Data:</strong> Details such as IP address, device identifiers, browser type, operating system, and performance metrics for the app.</li>
     <li><strong>Cookies or Similar Technologies:</strong> We may use cookies or comparable technologies to enhance your experience and analyze app usage.</li>
   </ul>
@@ -52,14 +52,14 @@
     <li>
       <strong>App Functionality</strong>
       <ul>
-        <li>To provide, personalize, and maintain Olymp’s features.</li>
+        <li>To provide, personalize, and maintain QChat’s features.</li>
         <li>To facilitate interactions with our AI features, powered by the OpenAI API.</li>
       </ul>
     </li>
     <li>
       <strong>Analytics</strong>
       <ul>
-        <li>To understand user behavior, identify and resolve issues, and enhance Olymp’s performance.</li>
+        <li>To understand user behavior, identify and resolve issues, and enhance QChat’s performance.</li>
         <li>To develop new features and improve user experience.</li>
       </ul>
     </li>
@@ -75,7 +75,7 @@
   <h2>4. Sharing and Disclosure of Information</h2>
   
   <h3>4.1 Service Providers</h3>
-  <p>We may share your personal information with trustworthy service providers and partners who support our app’s functionality (for example, AI model providers like OpenAI, cloud hosting, analytics), subject to stringent confidentiality and data protection obligations.</p>
+  <p>We may share your personal information with trustworthy service providers and partners who support our app’s functionality (for example, AI model providers like OpenAI, cloud hosting, analytics), subject to stringent confidentiality and data-protection obligations.</p>
   
   <h3>4.2 Legal Requirements</h3>
   <p>We may disclose your personal data if we believe in good faith that it is necessary to:</p>
@@ -89,7 +89,7 @@
   <p>In the event of a reorganization, merger, acquisition, or sale of our assets, we may transfer your personal information to the third parties involved in that transaction.</p>
   
   <h3>4.4 OpenAI’s Access to Your Data</h3>
-  <p>Because Olymp integrates the OpenAI API, certain user content will be transmitted to and possibly processed by OpenAI. How OpenAI handles such data is governed by the OpenAI Privacy Policy. We encourage you to review it to understand how OpenAI manages your information.</p>
+  <p>Because QChat integrates the OpenAI API, certain user content will be transmitted to and possibly processed by OpenAI. How OpenAI handles such data is governed by the OpenAI Privacy Policy. We encourage you to review it to understand how OpenAI manages your information.</p>
 
   <h2>5. Data Security and Retention</h2>
   <p>We implement commercially reasonable measures to protect your information and prevent unauthorized access, misuse, or disclosure. However, no method of storage or transmission over the internet is entirely secure.</p>
@@ -99,29 +99,29 @@
   
   <h3>6.1 Access, Updates, and Deletion</h3>
   <ul>
-    <li><strong>Account Management:</strong> You can delete your account at any time via the app’s account settings, which will remove your personal data from Olymp’s active databases, subject to legal and business-related retention requirements.</li>
+    <li><strong>Account Management:</strong> You can delete your account at any time via the app’s account settings, which will remove your personal data from QChat’s active databases, subject to legal and business-related retention requirements.</li>
     <li><strong>Additional Changes:</strong> You may also update or correct certain personal details through your account settings or by contacting us at <a href="mailto:qchatwelcome@gmail.com">qchatwelcome@gmail.com</a>.</li>
   </ul>
 
   <h3>6.2 Opt-Out and Discontinuation</h3>
-  <p>If you disagree with how we collect or use your data, you may stop using Olymp. You can also ask us to remove your account and personal data by sending a request to <a href="mailto:qchatwelcome@gmail.com">qchatwelcome@gmail.com</a>.</p>
+  <p>If you disagree with how we collect or use your data, you may stop using QChat. You can also ask us to remove your account and personal data by sending a request to <a href="mailto:qchatwelcome@gmail.com">qchatwelcome@gmail.com</a>.</p>
 
   <h3>6.3 Additional Rights</h3>
   <p>Depending on your location, you may have more rights regarding your personal data, such as the ability to object to or limit certain processing activities or to request data portability.</p>
 
   <h2>7. Age Requirements and Children’s Privacy</h2>
-  <p>Olymp is intended for individuals who are at least 13 years old. If you are between 13 and 18, parental or guardian consent is required to use Olymp. We do not knowingly collect personal data from children under 13. If you believe we have collected personal data from a child under 13, please email <a href="mailto:qchatwelcome@gmail.com">qchatwelcome@gmail.com</a>, and we will promptly delete the information as required by applicable law.</p>
+  <p>QChat is intended for individuals who are at least 13 years old. If you are between 13 and 18, parental or guardian consent is required to use QChat. We do not knowingly collect personal data from children under 13. If you believe we have collected personal data from a child under 13, please email <a href="mailto:qchatwelcome@gmail.com">qchatwelcome@gmail.com</a>, and we will promptly delete the information as required by applicable law.</p>
 
   <h2>8. Changes to This Privacy Policy</h2>
-  <p>We may update or modify this Privacy Policy at our discretion. When changes are made, we will post the revised version and update the “Effective Date.” Your continued use of Olymp after any changes are posted confirms your acceptance of the updated Policy. If the changes are substantial, we will make additional efforts to notify you.</p>
+  <p>We may update or modify this Privacy Policy at our discretion. When changes are made, we will post the revised version and update the “Effective Date.” Your continued use of QChat after any changes are posted confirms your acceptance of the updated Policy. If the changes are substantial, we will make additional efforts to notify you.</p>
 
   <h2>9. Contact Us</h2>
   <p>If you have questions or concerns about this Privacy Policy or need assistance with your rights, please reach out to us at:</p>
   <p><strong>Email:</strong> <a href="mailto:qchatwelcome@gmail.com">qchatwelcome@gmail.com</a></p>
 
-  <p>We appreciate your trust in Olymp and will continue to work hard to protect your privacy while delivering a secure, high-quality chat experience powered by the OpenAI API.</p>
+  <p>We appreciate your trust in QChat and will continue to work hard to protect your privacy while delivering a secure, high-quality chat experience powered by the OpenAI API.</p>
 
-  <p>© 2025 Olymp. All rights reserved.</p>
+  <p>© 2025 QChat. All rights reserved.</p>
 
 </body>
 </html>
