--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="qchat_logo.png" alt="QChat Logo">
+        <img src="qchatlogo.png" alt="QChat Logo">
         <h1>Welcome to QChat</h1>
         <p>Need help or have any questions?<br>Reach out to us anytime!</p>
         <p>Email: <a href="mailto:qchatwelcome@gmail.com
