--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   var link = window.location.href;
   var meta = document.createElement('meta');
   meta.name = 'apple-itunes-app';
-  meta.content = 'app-id=id6739166946, app-argument=' + link;
+  meta.content = 'app-id=6739166946, app-argument=' + link;
   document.head.appendChild(meta);
   setTimeout(function() {
     window.location.href = appStoreURL;
