--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   meta.name = 'apple-itunes-app';
   meta.content = 'app-id=6739166946, app-argument=' + link;
   document.head.appendChild(meta);
-  setTimeout(function() {
-    window.location.href = appStoreURL;
-  }, 1000);
+  // setTimeout(function() {
+  //   window.location.href = appStoreURL;
+  // }, 1000);
 })();
 </script>
 </head>
