--- a/index.html
+++ b/index.html
@@ -1,24 +1,75 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<title>Open in QChat</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<script>
-(function() {
-  var appStoreURL = 'https://apps.apple.com/app/id6739166946';
-  var link = window.location.href;
-  var meta = document.createElement('meta');
-  meta.name = 'apple-itunes-app';
-  meta.content = 'app-id=6739166946, app-argument=' + link;
-  document.head.appendChild(meta);
-  // setTimeout(function() {
-  //   window.location.href = appStoreURL;
-  // }, 1000);
-})();
-</script>
+  <meta charset="UTF-8">
+  <title>Открыть в QChat</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="apple-itunes-app" content="app-id=6739166946">
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: linear-gradient(135deg, #6c63ff, #48c6ef);
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+      text-align: center;
+    }
+
+    .container {
+      background: rgba(0,0,0,0.3);
+      padding: 40px;
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      max-width: 400px;
+      width: 90%;
+    }
+
+    .logo {
+      width: 80px;
+      height: 80px;
+      margin-bottom: 20px;
+    }
+
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 16px;
+      margin-bottom: 30px;
+      line-height: 1.5;
+    }
+
+    a.button {
+      display: inline-block;
+      background: #fff;
+      color: #6c63ff;
+      font-weight: bold;
+      text-decoration: none;
+      padding: 12px 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease, background 0.2s ease;
+    }
+
+    a.button:hover {
+      transform: scale(1.05);
+      background: #f0f0f0;
+    }
+  </style>
 </head>
 <body>
-<p>Перенаправление в App Store…</p>
+  <div class="container">
+    <img src="qchatlogo.png" alt="QChat Logo" class="logo">
+    <h1>Добро пожаловать в QChat</h1>
+    <p>Откройте приложение QChat на вашем устройстве или скачайте его из App Store.</p>
+    <a class="button" href="https://apps.apple.com/app/id6739166946">Открыть в App Store</a>
+  </div>
 </body>
 </html>
