--- a/index.html
+++ b/index.html
@@ -4,72 +4,106 @@
   <meta charset="UTF-8">
   <title>Открыть в QChat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Убираем app-argument, чтобы не было автопрыжка -->
   <meta name="apple-itunes-app" content="app-id=6739166946">
 
   <style>
-    body {
+    /* === Фон с анимацией === */
+    body, html {
       margin: 0;
       padding: 0;
+      height: 100%;
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-      background: linear-gradient(135deg, #6c63ff, #48c6ef);
-      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      color: #fff;
-      text-align: center;
+      overflow: hidden;
+      color: white;
     }
 
+    body {
+      background: linear-gradient(135deg, #6c63ff, #48c6ef);
+      background-size: 400% 400%;
+      animation: gradientBG 12s ease infinite;
+    }
+
+    @keyframes gradientBG {
+      0% {background-position: 0% 50%;}
+      50% {background-position: 100% 50%;}
+      100% {background-position: 0% 50%;}
+    }
+
+    /* === Контейнер === */
     .container {
-      background: rgba(0,0,0,0.3);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+      text-align: center;
+      padding: 20px;
       max-width: 400px;
-      width: 90%;
     }
 
     .logo {
-      width: 80px;
-      height: 80px;
+      width: 120px;
+      height: 120px;
       margin-bottom: 20px;
+      border-radius: 24px;
+      background: rgba(255,255,255,0.1);
+      padding: 16px;
     }
 
     h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
+      font-size: 32px;
+      font-weight: bold;
+      margin-bottom: 12px;
     }
 
     p {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 30px;
       line-height: 1.5;
+      opacity: 0.9;
     }
 
-    a.button {
-      display: inline-block;
-      background: #fff;
-      color: #6c63ff;
+    /* === Кнопки === */
+    .button {
+      display: block;
+      width: 100%;
+      margin: 10px 0;
+      padding: 14px;
+      font-size: 18px;
       font-weight: bold;
+      border-radius: 16px;
       text-decoration: none;
-      padding: 12px 24px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
       transition: transform 0.2s ease, background 0.2s ease;
     }
 
-    a.button:hover {
-      transform: scale(1.05);
-      background: #f0f0f0;
+    .button:hover {
+      transform: scale(1.03);
+    }
+
+    .button-primary {
+      background: white;
+      color: #6c63ff;
+    }
+
+    .button-secondary {
+      background: rgba(255,255,255,0.15);
+      color: white;
+      border: 1px solid rgba(255,255,255,0.3);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <img src="qchatlogo.png" alt="QChat Logo" class="logo">
-    <h1>Добро пожаловать в QChat</h1>
-    <p>Откройте приложение QChat на вашем устройстве или скачайте его из App Store.</p>
-    <a class="button" href="https://apps.apple.com/app/id6739166946">Открыть в App Store</a>
+    <!-- сюда подставь иконку knot_transparentлор.png -->
+    <img src="knot_transparentлор.png" alt="QChat Logo" class="logo">
+    <h1>QChat</h1>
+    <p>Войдите в приложение или скачайте его из App Store</p>
+
+    <!-- Кнопка для открытия deep link -->
+    <a class="button button-secondary" href="qchat://">Открыть приложение</a>
+
+    <!-- Кнопка для App Store -->
+    <a class="button button-primary" href="https://apps.apple.com/app/id6739166946">Скачать в App Store</a>
   </div>
 </body>
 </html>
