--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="qchat.png" alt="QChat Logo" class="logo">
+    <img src="qchat_white_bg.png" alt="QChat Logo" class="logo">
     <h1>QChat</h1>
     <p>Скачайте приложение из App Store</p>
 
