--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       height: 120px;
       margin-bottom: 20px;
       border-radius: 24px;
-      background: rgba(255,255,255,0.1);
+      background: #ffffff;
       padding: 16px;
     }
 
@@ -88,7 +88,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="qchat_white_bg.png" alt="QChat Logo" class="logo">
+    <img src="qchat.png" alt="QChat Logo" class="logo">
     <h1>QChat</h1>
     <p>Скачайте приложение из App Store</p>
 
