--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Скачать QChat</title>
+  <title>Download QChat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-itunes-app" content="app-id=6739166946">
 
   <style>
-    /* === Фон с анимацией === */
+    /* === Animated Background === */
     body, html {
       margin: 0;
       padding: 0;
@@ -32,7 +32,7 @@
       100% {background-position: 0% 50%;}
     }
 
-    /* === Контейнер === */
+    /* === Container === */
     .container {
       text-align: center;
       max-width: 400px;
@@ -62,7 +62,7 @@
       opacity: 0.9;
     }
 
-    /* === Кнопка === */
+    /* === Button === */
     .button {
       display: block;
       width: 100%;
@@ -90,9 +90,9 @@
   <div class="container">
     <img src="qchat.png" alt="QChat Logo" class="logo">
     <h1>QChat</h1>
-    <p>Скачайте приложение из App Store</p>
+    <p>Download the app from the App Store</p>
 
-    <a class="button" href="https://apps.apple.com/app/id6739166946">Скачать в App Store</a>
+    <a class="button" href="https://apps.apple.com/app/id6739166946">Download on the App Store</a>
   </div>
 </body>
 </html>
