--- a/index.html
+++ b/index.html
@@ -32,12 +32,10 @@
       100% {background-position: 0% 50%;}
     }
 
-    /* === Container === */
     .container {
       text-align: center;
       max-width: 400px;
       width: 90%;
-      box-sizing: border-box;
     }
 
     .logo {
@@ -62,27 +60,23 @@
       opacity: 0.9;
     }
 
-    /* === Button === */
-    .button {
-      display: block;
-      width: 100%;
-      max-width: 100%;
-      margin: 0 auto;
-      padding: 14px;
-      font-size: 18px;
-      font-weight: bold;
-      border-radius: 16px;
-      text-decoration: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.25);
-      transition: transform 0.2s ease, background 0.2s ease;
-      box-sizing: border-box;
-      background: white;
-      color: #6c63ff;
+    /* === Official App Store Badge === */
+    .appstore-badge {
+      display: inline-block;
+      overflow: hidden;
+      border-radius: 12px;
+      transition: transform 0.2s ease, opacity 0.2s ease;
     }
 
-    .button:hover {
+    .appstore-badge:hover {
       transform: scale(1.03);
-      background: #f5f5f5;
+      opacity: 0.9;
+    }
+
+    .appstore-badge img {
+      width: 180px;
+      height: auto;
+      display: block;
     }
   </style>
 </head>
@@ -92,7 +86,9 @@
     <h1>QChat</h1>
     <p>Download the app from the App Store</p>
 
-    <a class="button" href="https://apps.apple.com/app/id6739166946">Download on the App Store</a>
+    <a class="appstore-badge" href="https://apps.apple.com/app/id6739166946" target="_blank" rel="noopener">
+      <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us" alt="Download on the App Store">
+    </a>
   </div>
 </body>
 </html>
