--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
   <div class="container">
     <img src="qchat.png" alt="QChat Logo" class="logo">
     <h1>QChat</h1>
-    <p>Download the app from the App Store</p>
+    <p>AI-native marketplace where buyers and sellers use AI agents to find, order, deliver, and sell.</p>
 
     <a class="appstore-badge" href="https://apps.apple.com/app/id6739166946" target="_blank" rel="noopener">
       <img src="https://tools.applemediaservices.com/api/badges/download-on-the-app-store/black/en-us" alt="Download on the App Store">
